--- a/README
+++ b/README
@@ -1,1 +1,23 @@
-The Land Registry using Smart Contracts is a blockchain-based decentralized application (DApp) designed to eliminate land ownership fraud, ensure transparency, and automate property transactions using Ethereum smart contracts.
+The traditional land registry system has long been plagued by inefficiencies, corruption, and fraud. Conventional paper-based and even digital centralized databases are susceptible to tampering, unauthorized modifications, and data loss. Additionally, property transactions often require intermediaries such as government officials, real estate agents, and lawyers, leading to high transaction costs and delays.
+
+Blockchain technology, particularly smart contracts, presents a revolutionary approach to solving these challenges by offering a decentralized, secure, and immutable land registry system. By leveraging blockchain’s distributed ledger and cryptographic security, smart contracts automate transactions, remove the need for intermediaries, and ensure transparency and efficiency in land registration and ownership transfer.
+
+Need for a Blockchain-based Land Registry System
+Currently, land ownership disputes, fraudulent property sales, and inefficient bureaucratic processes are common in many countries. Some of the critical challenges faced by the traditional system include:
+
+Lack of Transparency
+
+In traditional systems, land records are maintained by government agencies, often leading to data manipulation and corruption.
+Buyers and sellers lack direct access to verified ownership records.
+High Possibility of Fraud
+
+Forged documents and fake property titles are major concerns in real estate transactions.
+Multiple sales of the same land to different buyers (duplicate registration) result in legal conflicts.
+Slow and Costly Process
+
+The current process involves multiple intermediaries, such as brokers, lawyers, and notaries, increasing costs.
+Land title verification and ownership transfers take weeks or even months due to bureaucratic delays.
+Risk of Data Loss or Manipulation
+
+Traditional databases are centralized and prone to hacking, data breaches, or accidental loss.
+Unauthorized modifications can occur, leading to disputes and misinformation
