--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+#![Image](https://github.com/user-attachments/assets/03d558e8-3815-48d6-8bef-c5f75004c5f2)
 The traditional land registry system has long been plagued by inefficiencies, corruption, and fraud. Conventional paper-based and even digital centralized databases are susceptible to tampering, unauthorized modifications, and data loss. Additionally, property transactions often require intermediaries such as government officials, real estate agents, and lawyers, leading to high transaction costs and delays.
 
 Blockchain technology, particularly smart contracts, presents a revolutionary approach to solving these challenges by offering a decentralized, secure, and immutable land registry system. By leveraging blockchain’s distributed ledger and cryptographic security, smart contracts automate transactions, remove the need for intermediaries, and ensure transparency and efficiency in land registration and ownership transfer.
